WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314339
REGRESSION(
312814@main
): Broke some macOS builds (use of undeclared identifier 'vmPageSize')
https://bugs.webkit.org/show_bug.cgi?id=314339
Summary
REGRESSION(312814@main): Broke some macOS builds (use of undeclared identifie...
Abrar Rahman Protyasha
Reported
2026-05-07 12:58:10 PDT
``` /Source/JavaScriptCore/llint/LLIntData.cpp:111:34: error: use of undeclared identifier 'vmPageSize'; did you mean 'pageSize'? 111 | uintptr_t pageSizeMask = vmPageSize() - 1; ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-07 12:58:16 PDT
<
rdar://problem/176488572
>
Abrar Rahman Protyasha
Comment 2
2026-05-07 13:02:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64490
EWS
Comment 3
2026-05-07 13:04:37 PDT
Committed
312824@main
(b23bfe44916e): <
https://commits.webkit.org/312824@main
> Reviewed commits have been landed. Closing PR #64490 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug