REGRESSION(312814@main): Broke some macOS builds (use of undeclared identifier 'vmPageSize') https://bugs.webkit.org/show_bug.cgi?id=314339 rdar://176488572

Unreviewed build fix.

312814@main trimmed one too many includes, let's bring back
wtf/ResourceUsage.h.

* Source/JavaScriptCore/llint/LLIntData.cpp:

Canonical link: https://commits.webkit.org/312824@main