Source/JavaScriptCore/llint/LLIntData.cpp
@@ -35,6 +35,7 @@
 #include "Opcode.h"
 
 #if PLATFORM(COCOA)
+#include <wtf/ResourceUsage.h>
 #include <wtf/cocoa/Entitlements.h>
 #endif
 
